<resources>
    <string name="app_name">APP-MB2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login">Iniciar Sesión</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="Registro">Registro</string>
    <string name="clic_to_login">¿Ya tienes una cuenta?</string>
    <string name="clic_to_register">Crear cuenta</string>
    <string name="fecha_nacimiento">Fecha de nacimiento (DD/MM/YYYY)</string>
    <string name="nombre_usuario">Nombres</string>
    <string name="apellidoP_usuario">Apellido Paterno</string>
    <string name="apellidoM_usuario">Apellido Materno</string>

</resources>